Fix header spacing.

--- a/_sass/includes/_header.scss
+++ b/_sass/includes/_header.scss
@@ -5,7 +5,9 @@
   display: inline-block;
   float: left;
   width: 100%;
-
+  height: 0px;
+  padding-bottom: 60px;
+  
   a {
     color: $header-link-color;
   }
